fixed overlap of data with F link

--- a/src/Weather.css
+++ b/src/Weather.css
@@ -49,7 +49,7 @@
   font-size: 12px;
   line-height: 16px;
   position: relative;
-  margin-left: -67px;
+  margin-left: -52px;
   color: #70757a;
 }
 
